@@ -1,0 +1,3 @@
+  # cat=basic; type=user[EXT:dbal/lib/class.tx_dbal_tsparserext.php:tx_dbal_tsparserext->displayMessage];
+Compatibility=
+
