@@ -1,0 +1,1 @@
+This directory contains various resources for supported DBMS. They may be useful to solve some edge-cases not yet supported in either TYPO3 or DBAL.
